# OurTheBestProject

./: .gitignore  CMakeLists.txt  README.md  S&P 500 Historical Data.csv  main.cpp
app/: CMakeLists.txt  main.cpp  main_cli.cpp
csr/: CSV_edit.cpp  CSV_edit.h
csr/CSV/: csv_loader.cpp  csv_loader.h
include/analysis/: Analyzer.hpp  SpikeDetector.hpp  Statistics.hpp
include/app/: AnalysisController.hpp  ChartRenderer.hpp  MainWindow.hpp
include/core/: Candle.hpp  CsvLoader.hpp  Exceptions.hpp  TimeSeries.hpp
include/indicators/: DoubleMA.hpp  Indicator.hpp  MovingAverage.hpp
src/: CMakeLists.txt
src/analysis/: SpikeDetector.cpp  Statistics.cpp
src/app/: AnalysisController.cpp  CandleChartView.cpp  ChartRenderer.cpp  MainWindow.cpp
src/core/: Candle.cpp  CsvLoader.cpp  Exceptions.cpp  TimeSeries.cpp
src/indicators/: DoubleMA.cpp  MovingAverage.cpp
tests/: CMakeLists.txt  analysis_tests.cpp  core_tests.cpp  indicators_tests.cpp
